# auth-api

./: .dockerignore  .env.dev  .env.example  .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  config.prod.env  deny.toml  docker-compose.api.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: backmerge.yml  backup-drill.yml  ci.yml  code-checks.yml  code-quality.yml  docker-checks.yml  docker-publish.yml  security-audit.yml  security.yml  tests.yml
benches/: core_benches.rs
deploy/app/: docker-compose.yml  nginx.conf  runtime.env.example
deploy/app/alloy/: config.alloy  docker-compose.yml
deploy/data/: docker-compose.yml  runtime.env.example
deploy/data/alloy/: config.alloy
deploy/data/grafana/dashboards/: rust-api-app-server.json  rust-api-audit-overview.json
deploy/data/grafana/datasources/: rust-api-postgresql.yml
deploy/observability/: alloy.config.alloy  docker-compose.yml  loki-config.yml  runtime.env.example
deploy/observability/grafana/provisioning/dashboards/json/: data-server-overview.json  observability-services.json  postgresql-and-redis-logs.json
deploy/proxy/: nginx.conf
docker/init/: appsmith.sql
docs/app/: environment-variables.md  nginx-setup.md  pass-store.md  ports.md  secrets.md  setup.md
docs/data/: database-setup.md  environment-variables.md  pass-store.md  ports.md  redis-setup.md  secrets.md  setup.md
docs/deploy/: README.md
docs/deploy/api/: deployment.md  nginx.md  secrets.md
docs/deploy/app/: environment-variables.md  monitoring.md  nginx-setup.md  nginx.md  pass-store.md  ports.md  secrets.md  services.md  setup.md
docs/deploy/data/: database-setup.md  database.md  environment-variables.md  monitoring.md  pass-store.md  ports.md  redis-setup.md  secrets.md  services.md  setup.md
docs/deploy/database/: deployment.md
docs/deploy/guides/: operations.md  prometheus-alerts.yml  update.md
docs/deploy/observability/: environment-variables.md  pass-store.md  ports.md  postgresql-datasource.md  secrets.md  setup.md
docs/deploy/shared/: cryptsetup-installation.md  cryptsetup-volumes.md  image-release.md
docs/dev/: README.md  docker-code-analysis.md  rust-code-analysis.md  workflows.md
docs/dev/api/: routes.md
docs/dev/database/: schema.md
docs/dev/guides/: commands.md  configuration.md  prerequisites.md  release.md  workflows.md
docs/report/: rust-api-technical-report.tex
docs/shared/: cryptsetup-installation.md  cryptsetup-volumes.md  image-release.md  pass-installation.md
migrations/: 0001_extensions.sql  0002_users.sql  0003_roles.sql  0004_permissions.sql  0005_role_permissions.sql  0006_user_roles.sql  0007_sessions.sql  0008_two_factor_methods.sql  0009_email_2fa_codes.sql  0009_email_verification_tokens.sql  0010_email_verification_tokens.sql  0010_password_reset_tokens.sql  0011_password_reset_tokens.sql  0011_recovery_codes.sql  0012_login_attempts.sql  0012_recovery_codes.sql  0013_audit_log.sql  0013_login_attempts.sql  0014_audit_log.sql  0014_seed.sql  0015_login_locations.sql  0016_seed.sql  0017_cleanup_schedule.sql  0018_registered_clients.sql  0019_used_totp_codes.sql
nginx/: nginx.conf
reports/coverage/: tarpaulin-report.html  tarpaulin-report.json
scripts/: backup-db.sh  backup-drill.sh  bench-all.sh  bench-http.sh  bench-rust.sh  bench-sql.sh  restore-db.sh  security-check.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/domain/: audit.rs  client_quota.rs  login_attempt.rs  login_location.rs  mod.rs  registered_client.rs  role.rs  session.rs  token.rs  two_factor.rs  user.rs
src/handlers/: auth.rs  device.rs  extractors.rs  mod.rs  session.rs  two_factor.rs  user.rs  webauthn.rs
src/middleware/: mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
src/repositories/: audit.rs  client_quota.rs  email_2fa.rs  login_attempt.rs  login_location.rs  mod.rs  recovery_code.rs  registered_client.rs  role.rs  session.rs  token.rs  two_factor.rs  user.rs
src/services/: auth.rs  captcha.rs  cleanup.rs  device.rs  email.rs  email_2fa.rs  email_change.rs  events.rs  key_rotation.rs  mod.rs  reauth.rs  risk_score.rs  session.rs  two_factor.rs  user.rs  webauthn.rs
src/utils/: backoff.rs  crypto.rs  geoip.rs  jwt.rs  mod.rs  password.rs  time.rs  totp.rs
templates/emails/en/: email_change_otp.html  email_otp.html  new_device_login.html  password_changed.html  password_reset.html  recovery_code_used.html  suspicious_login.html  two_factor_disabled.html  verification.html
templates/emails/fr/: email_change_otp.html  email_otp.html  new_device_login.html  password_changed.html  password_reset.html  recovery_code_used.html  suspicious_login.html  two_factor_disabled.html  verification.html
tests/db/: smoke_test.rs
tests/db/audit/: append_only.rs  mod.rs  partitioning.rs
tests/db/common/: db.rs  fixtures.rs
tests/db/flows/: auth.rs  mod.rs  session_security.rs
tests/db/migrations/: apply_all.rs  extensions.rs  mod.rs
tests/db/performance/: mod.rs  query_plans.rs
tests/db/rbac/: mod.rs  permissions.rs  role_permissions.rs  roles.rs
tests/db/sessions/: cleanup.rs  constraints.rs  login_attempts.rs  mod.rs
tests/db/tokens/: email_verification.rs  mod.rs  password_reset.rs
tests/db/two_factor/: methods.rs  mod.rs  recovery_codes.rs
tests/db/users/: constraints.rs  lifecycle.rs  mod.rs
tests/http/: mod.rs
tests/http/auth/: captcha.rs  headers.rs  jwt.rs  lockout.rs  login.rs  mod.rs  password_reset.rs  redis_resilience.rs  refresh.rs  register.rs  risk.rs  security.rs  totp.rs  two_factor.rs  webauthn.rs
tests/http/common/: app.rs  fixtures.rs  mailpit.rs  mod.rs
tests/http/crypto/: key_rotation.rs  mod.rs
tests/http/db/: audit_log.rs  audit_repo.rs  key_rotation.rs  login_location.rs  mod.rs  recovery_codes.rs  roles.rs  two_factor_repo.rs
tests/http/mail/: emails.rs  mod.rs
tests/http/session/: list.rs
tests/http/user/: email.rs  mod.rs  password.rs  profile.rs  reauth.rs
