[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "json"] }
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
postgres = { version = "0.19.12", features = ["with-uuid-1", "with-time-0_3"] }
uuid = "1.22.0"

[[test]]
name = "migrations"
path = "tests/db/migrations/mod.rs"

[[test]]
name = "users"
path = "tests/db/users/mod.rs"

[[test]]
name = "sessions"
path = "tests/db/sessions/mod.rs"

[[test]]
name = "rbac"
path = "tests/db/rbac/mod.rs"

[[test]]
name = "two_factor"
path = "tests/db/two_factor/mod.rs"

[[test]]
name = "tokens"
path = "tests/db/tokens/mod.rs"

[[test]]
name = "audit"
path = "tests/db/audit/mod.rs"

[[test]]
name = "flows"
path = "tests/db/flows/mod.rs"

[[test]]
name = "db_smoke_test"
path = "tests/db/smoke_test.rs"
