[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
async-nats = "0.49"
axum = "0.8.8"
axum-prometheus = "0.10"
metrics = "0.24"
base64 = "0.22.1"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1", "script"] }
dotenvy = "0.15.7"
p256 = { version = "0.13", features = ["ecdsa", "pem", "jwk"] }
ipnetwork = "0.20"
# aws_lc_rs backend (already in the tree via rustls): the rust_crypto backend
# pulls in the `rsa` crate, which carries the unfixed RUSTSEC-2023-0071
# (Marvin) advisory - RSA is never used here, we only sign/verify ES256.
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "derive", "json", "ipnetwork", "migrate"] }
tera = { version = "2.0", features = ["glob_fs"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
totp-rs = { version = "5.7.1", features = ["gen_secret"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
tower-http = { version = "0.7.0", features = ["cors", "timeout"] }
email_address = "0.2.9"
maxminddb = "0.29.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "form"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
p256 = { version = "0.13", features = ["ecdsa"] }
postgres = { version = "0.19.12", features = ["with-uuid-1", "with-time-0_3"] }
proptest = "1.9.0"
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "derive", "json", "ipnetwork", "migrate"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }


[[test]]
name = "migrations"
path = "tests/db/migrations/mod.rs"

[[test]]
name = "users"
path = "tests/db/users/mod.rs"

[[test]]
name = "sessions"
path = "tests/db/sessions/mod.rs"

[[test]]
name = "rbac"
path = "tests/db/rbac/mod.rs"

[[test]]
name = "two_factor"
path = "tests/db/two_factor/mod.rs"

[[test]]
name = "tokens"
path = "tests/db/tokens/mod.rs"

[[test]]
name = "audit"
path = "tests/db/audit/mod.rs"

[[test]]
name = "flows"
path = "tests/db/flows/mod.rs"

[[test]]
name = "db_smoke_test"
path = "tests/db/smoke_test.rs"

[[test]]
name = "performance"
path = "tests/db/performance/mod.rs"

[[test]]
name = "http"
path = "tests/http/mod.rs"

[[bench]]
name = "core_benches"
harness = false
